# moments-aura

./: .env.example  .gitignore  Cargo.toml  Containerfile  README.md  compose.yaml  config.toml
.sqlx/: query-0796c7f615f949976c8d0c04fe0b37297d8cce1c2341002d313d84347abd5016.json  query-1f51f61de1c9270cdfc6207d5a792bb0988b8481c749ba57dc96db58fab0ef89.json  query-219334073b6b1fc9795bf2c20e11bbbb35a42a4654624b9ba043f35da66bc738.json  query-24e3b586225b167d724778bc5e0d5c7ee8e57d260a22b56ab4ecbc5915eec069.json  query-8068617d8bc394740e3e1f4c28e9b09ea339566373144633016bbc0aae593e0f.json  query-9621628e430c482d93f19ce778a24022e1bf5dda5d2e0c8bc091f906c0625eb7.json  query-9b1bfe3dc32899a3e31cb5ef844afc9ae4fa73f7870999e6fda7e5fd34d9caa9.json  query-bcdd7ae2b248ad309fe0cb487d75b496604d95f4a41e480cd6463ffc9cb0816e.json  query-c5b010e657991da8d1ac2b87840f84c54280cd9bab673b9ad483cc2444b4bd47.json  query-d0bec3ba8970fee755d268be805a88b2dc2d99111f74848c006b8ed51ddb06a8.json  query-e2ff63ddfcd1984dc81a8abb6b750ac6cae19c246fc2879197246f86c958824b.json  query-eeb689d12a21b649514a71ed20a32533f4c08828088ec6bd4e5e742668c3c737.json  query-fccc7e222550e359f981b13ba8508d460ec95613872024e194837c35318eded6.json
examples/: test_ai_tags.rs
frontend/: .cta.json  Containerfile  README.md  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
frontend/src/components/ui/: file-uploader.tsx  sonner.tsx
frontend/src/features/auth/: api.ts  auth-layout.tsx  hooks.tsx  login-page.tsx  register-page.tsx
frontend/src/features/dashboard/: confirm-delete-modal.tsx  dashboard-page.tsx
frontend/src/features/favorites/: favorites-page.tsx
frontend/src/features/image/: api.ts
frontend/src/features/layout/: dashboard-layout.tsx
frontend/src/features/photos/: confirm-delete-modal.tsx  discard-changes-modal.tsx  image-canvas.tsx  image-context.tsx  image-detail-view.tsx  image-sidebar.tsx  photo-card.tsx  photos-page.tsx  slideshow-modal.tsx  use-photo-selection.tsx
frontend/src/features/playground/: page.tsx
frontend/src/features/search/: search-page.tsx
frontend/src/features/tags/: tags-filter-panel.tsx
frontend/src/features/theme/: mode-toggle.tsx
frontend/src/features/trash/: trash-page.tsx
frontend/src/features/upload/: api.ts
frontend/src/lib/: use-local-storage.ts  utils.ts
migrations/: 20251029032013_create_table_image.sql  20251029032013_create_table_photo.sql  20251115122022_create_table_user.sql  20251120070339_alter_table_image_add_column_user_id.sql  20251127153854_create_table_image_tag.sql  20251127154922_alter_table_image_add_column_exif_data.sql  20251209100637_initial.sql  20251211114928_add_tags.sql
src/: ai.rs  app.rs  auth.rs  config.rs  db.rs  exif.rs  images.rs  infra.rs  lib.rs  main.rs  object_storage.rs  photos.rs  tags.rs  users.rs
src/app/: auth.rs  config.rs  error.rs  images.rs  photos.rs  users.rs
src/app/auth/: extractor.rs  jwt.rs
src/auth/: jwt.rs
src/images/: exif.rs
src/infra/: crypto.rs  storage.rs  util.rs
src/object_storage/: fs_storage.rs
(+11 files in other folders)
