[package]
name = "moments-aura"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs"] }
serde = { version = "1.0.228", features = ["derive", ] }
axum = { version = "0.8.6", features = ["multipart", "macros"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
object_store = "0.12.4"
serde_json = "1.0.145"
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros"] }
tokio-util = { version = "0.7.16", features = ["io"] }
futures = "0.3.31"
tracing-panic = "0.1.2"
anyhow = "1.0.100"
tower-http = { version = "0.6.6", features = ["trace"] }
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v7"] }

[dev-dependencies]
tempfile = "3.10"
